# webdataproject

./: LICENSE  Project_2_Working_with_Web_Data.ipynb  README.md  pre-commit-config.yaml  pyproject.toml
src/: Project_2_Working_with_Web_Data.ipynb
src/my_webdatapack/: ForbesSitemapParser.py  RecipeDataCollector.py  katz_staff_analysis.py  katz_staff_scraper.py  main.py
