[tool.poetry]
name = "webdataproject"
version = "0.1.0"
description = "A Python package for web scraping and data analysis."
authors = [
    {name = "Mapalo Lukashi", email = "mlukashi@mail.yu.edu"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["web scraping", "data analysis", "Python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
seaborn = "^0.11"
matplotlib = "^3.4"
beautifulsoup4 = "^4.9"
requests = "^2.25"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"my_webdatapack" = ["*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
