
[tool.poetry]
name = "my_webdatapack"
version = "0.1.0"
description = "A Python package for web scraping and data analysis."
authors = ["Mapalo Lukashi <mlukashi@mail.yu.edu>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
seaborn = "^0.11"
matplotlib = "^3.4"
beautifulsoup4 = "^4.9"
requests = "^2.25"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
my-webdatapack = "my_webdatapack.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"my_webdatapack" = ["*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 

